Sourcery-AI changes requests + refactor
Refactor OAuth handling and configuration

- Updated OAuthInterceptor to improve extraction of OAuth parameters from headers and request parameters, using LinkedHashMap for order preservation.
- Introduced AppOAuth1Config class to encapsulate OAuth configuration parsing from various document types (Map, Properties, POJO).
- Created OAuthConfigService to manage loading and validating OAuth configurations for applications.
- Implemented OAuthServiceFactory to build OAuth10aService instances with proper endpoints.
- Enhanced OscarOAuthDataProvider to support configurable request token lifetime and service building.
- Refactored OscarRequestTokenHandler to utilize the new services for handling request tokens and validation.
- Simplified OAuth request token flow in OscarRequestTokenService, integrating new configuration and service classes.